tests/snapshots/test__list_rev_fold.snap
---
source: tests/test.rs
expression: parser.parse(&buffer).unwrap()
---
SynthProblem {
    imports: [],
    decls: [
        TypeDecl(
            "nat",
            Type(
                Variant([("O", Type(Tuple([]))), ("S", Type(Named("nat")))]),
            ),
        ),
        TypeDecl(
            "list",
            Type(
                Variant([("Nil", Type(Tuple([]))), ("Cons", Type(Tuple([Type(Named("nat")), Type(Named("list"))])))]),
            ),
        ),
        ExpDecl(
            "snoc",
            Exp(
                Fix("snoc", Type(Arrow(Type(Arrow(Type(Named("list")), Type(Named("nat")))), Type(Named("list")))), Exp(Func(Param { name: "l1", ty: Type(Named("list")) }, Exp(Func(Param { name: "n", ty: Type(Named("nat")) }, Exp(Match(Exp(Var("l1")), [(Ctor("Nil", Wildcard), Exp(CTor("Cons", Exp(Tuple([Exp(Var("n")), Exp(CTor("Nil", Exp(Tuple([]))))]))))), (Ctor("Cons", Tuple([Var("h"), Var("t")])), Exp(CTor("Cons", Exp(Tuple([Exp(Var("h")), Exp(App(Exp(App(Exp(Var("snoc")), Exp(Var("t")))), Exp(Var("n"))))])))))]))))))),
            ),
        ),
        ExpDecl(
            "fold",
            Exp(
                Fix("fold", Type(Arrow(Type(Arrow(Type(Arrow(Type(Arrow(Type(Arrow(Type(Named("list")), Type(Named("nat")))), Type(Named("list")))), Type(Named("list")))), Type(Named("list")))), Type(Named("list")))), Exp(Func(Param { name: "f", ty: Type(Arrow(Type(Arrow(Type(Named("list")), Type(Named("nat")))), Type(Named("list")))) }, Exp(Func(Param { name: "init", ty: Type(Named("list")) }, Exp(Func(Param { name: "l", ty: Type(Named("list")) }, Exp(Match(Exp(Var("l")), [(Ctor("Nil", Wildcard), Exp(Var("init"))), (Ctor("Cons", Tuple([Var("h"), Var("t")])), Exp(App(Exp(App(Exp(Var("f")), Exp(App(Exp(App(Exp(App(Exp(Var("fold")), Exp(Var("f")))), Exp(Var("init")))), Exp(Var("t")))))), Exp(Var("h")))))]))))))))),
            ),
        ),
    ],
    synth_type: Type(
        Arrow(Type(Named("list")), Type(Named("list"))),
    ),
    spec: UIOEs(
        [
            Example {
                input: [
                    Exp(
                        CTor("Nil", Exp(Tuple([]))),
                    ),
                ],
                output: Exp(
                    CTor("Nil", Exp(Tuple([]))),
                ),
            },
            Example {
                input: [
                    Exp(
                        CTor("Cons", Exp(Tuple([Exp(CTor("O", Exp(Tuple([])))), Exp(CTor("Cons", Exp(Tuple([Exp(CTor("S", Exp(CTor("O", Exp(Tuple([])))))), Exp(CTor("Nil", Exp(Tuple([]))))]))))]))),
                    ),
                ],
                output: Exp(
                    CTor("Cons", Exp(Tuple([Exp(CTor("S", Exp(CTor("O", Exp(Tuple([])))))), Exp(CTor("Cons", Exp(Tuple([Exp(CTor("O", Exp(Tuple([])))), Exp(CTor("Nil", Exp(Tuple([]))))]))))]))),
                ),
            },
        ],
    ),
}
