tests/snapshots/test__nat_iseven.snap
---
source: tests/test.rs
expression: parser.parse(&buffer).unwrap()
---
SynthProblem {
    imports: [],
    decls: [
        TypeDecl(
            "nat",
            Type(
                Variant([("O", Type(Tuple([]))), ("S", Type(Named("nat")))]),
            ),
        ),
        TypeDecl(
            "bool",
            Type(
                Variant([("True", Type(Tuple([]))), ("False", Type(Tuple([])))]),
            ),
        ),
    ],
    synth_type: Type(
        Arrow(Type(Named("nat")), Type(Named("bool"))),
    ),
    spec: UIOEs(
        [
            Example {
                input: [
                    Exp(
                        CTor("O", Exp(Tuple([]))),
                    ),
                ],
                output: Exp(
                    CTor("True", Exp(Tuple([]))),
                ),
            },
            Example {
                input: [
                    Exp(
                        CTor("S", Exp(CTor("S", Exp(CTor("O", Exp(Tuple([]))))))),
                    ),
                ],
                output: Exp(
                    CTor("True", Exp(Tuple([]))),
                ),
            },
            Example {
                input: [
                    Exp(
                        CTor("S", Exp(CTor("S", Exp(CTor("S", Exp(CTor("O", Exp(Tuple([]))))))))),
                    ),
                ],
                output: Exp(
                    CTor("False", Exp(Tuple([]))),
                ),
            },
            Example {
                input: [
                    Exp(
                        CTor("S", Exp(CTor("O", Exp(Tuple([]))))),
                    ),
                ],
                output: Exp(
                    CTor("False", Exp(Tuple([]))),
                ),
            },
        ],
    ),
}
